[gd_scene load_steps=11 format=2]

[ext_resource path="res://weapons/arrow.png" type="Texture" id=1]
[ext_resource path="res://addons/gdquest_visualization_tools/2d/shaders/Shape2D.tres" type="Shader" id=2]
[ext_resource path="res://nodes/HitBox.gd" type="Script" id=3]
[ext_resource path="res://addons/gdquest_visualization_tools/2d/DebugCollisionShape2D.gd" type="Script" id=4]
[ext_resource path="res://homing-demo/weapons/Missile.gd" type="Script" id=5]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )

[sub_resource type="CircleShape2D" id=1]
radius = 21.095

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 2 )

[sub_resource type="CircleShape2D" id=5]
radius = 470.106

[node name="Missile" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( 45, 0 )
monitoring = false
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
self_modulate = Color( 0.690196, 0.188235, 0.360784, 1 )
material = SubResource( 2 )
shape = SubResource( 1 )
script = ExtResource( 4 )
palette = 2
theme = 0
theme_width = 4
theme_sample = 24

[node name="ImpactDetector" type="Area2D" parent="."]
position = Vector2( 45, 0 )
collision_layer = 0
collision_mask = 5
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImpactDetector"]
self_modulate = Color( 0.690196, 0.188235, 0.360784, 1 )
material = SubResource( 3 )
shape = SubResource( 1 )
script = ExtResource( 4 )
palette = 2
theme = 0
theme_width = 4
theme_sample = 24

[node name="EnemyDetector" type="Area2D" parent="."]
position = Vector2( 45, 0 )
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
self_modulate = Color( 0.690196, 0.188235, 0.360784, 1 )
material = SubResource( 4 )
shape = SubResource( 5 )
script = ExtResource( 4 )
palette = 2
theme = 0
theme_width = 4
theme_sample = 24

[node name="Timer" type="Timer" parent="."]
one_shot = true
